Add TrafficTestController with basic POST endpoint

--- a/lab-scenarios/01-traffic-weight-split/app/src/main/resources/application.properties
+++ b/lab-scenarios/01-traffic-weight-split/app/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=demo
+#src/main/resources/application.properties
+
+#Application Name
+spring.application.name=istio-lab
+
+spring.profiles.active=local
