--- a/manifests/00-istio-setup/istio-operator.yaml
+++ b/manifests/00-istio-setup/istio-operator.yaml
@@ -20,12 +20,15 @@ spec:
               - name: status-port
                 port: 15021
                 targetPort: 15021
+                nodePort: 32704
               - name: http2
                 port: 80
                 targetPort: 8080
+                nodePort: 32377
               - name: https
                 port: 443
                 targetPort: 8443
+                nodePort: 30308
   values:
     global:
       proxy:
